--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 html {
     scroll-behavior: smooth;
+    background-color: #000;
 }
 
 :root {
@@ -18,6 +19,18 @@ html {
 body {
     font-family: 'Inter', sans-serif;
     background-image: url("../images/image.png");
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--text-color);
+}
+
+::-webkit-scrollbar-track {
+    background-color: #000;
 }
 
 
@@ -160,21 +173,118 @@ nav a:hover {
   height: 100vh;
   width: 100%;
   color: #fff;
-  width: 40%;
-  margin-left: 50rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: end;
+  padding-right: 12rem;
+}
+
+.about-content {
+    width: 40%;
 }
 
 .about h2 {
-    font-size: 2.5rem;
+    font-size: 3rem;
     margin-bottom: 1.2rem;
-    background: linear-gradient(270deg, var(--main-color) 10%, var(--text-color) 100%);
+    background: linear-gradient(200deg, var(--main-color) 10%, var(--text-color) 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
 .about span {
     color: var(--text-color);
+}
+
+.about p {
+    line-height: 25px;
+    font-size: 1.2rem;
+}
+
+
+/* ---------------------------- PROJECTS -------------------------- */
+
+.projects {
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    height: 100vh;
+}
+
+.heading {
+    margin-top: 150px;
+    margin-bottom: 150px;
+    font-size: 3.5rem;
+}
+
+.projects-box {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 425px));
+    justify-content: space-around;
+}
+
+.project-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    border: 2px solid var(--text-color);
+    margin-bottom: 5rem;
+    padding: 2rem;
+    border-radius: 20px;
+    box-shadow:
+        0 0 10px #10ffe74f,
+        0 0 15px #10ffe74f,
+        0 0 20px #10ffe74f;
+    min-height: 500px;
+    transition: all .15s ease-in-out;
+}
+
+.project-card:hover {
+    transform: scale(1.05);
+    box-shadow:
+        0 0 10px #10ffe7af,
+        0 0 15px #10ffe7ba,
+        0 0 20px #10ffe7bb;
+}
+
+.project-card img {
+    width: 100%;
+    height: auto;
+    aspect-ratio: 4 / 3;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.project-card h4 {
+    font-size: 1.5rem;
+    margin: 1rem 0 0.5rem;
+}
+
+.project-card p {
+    line-height: 1.4rem;
+    font-size: 1rem;
+    flex: 1;
+    margin-bottom: 1.5rem;
+    text-align: center;
+}
+
+.project-card button {
+    height: 2.5rem;
+    width: 10rem;
+    background-color: var(--text-color);
+    border: none;
+    border-radius: 12px;
+    color: #000000;
+    font-weight: 600;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: all .15s ease-in-out;
+}
+
+.project-card button:hover {
+    transform: scale(1.1);
 }
