--- a/styles/media.css
+++ b/styles/media.css
@@ -101,3 +101,72 @@
     }
 
 }
+
+@media (max-width: 400px) {
+    
+    .home {
+        padding-top: 10rem;
+        width: 90%;
+    }
+
+    .about {
+        width: 90%;
+        margin: auto;
+        margin-top: 5rem;
+        padding: 0;
+        padding-top: 12rem;
+    }
+
+    .projects {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 90%;
+        margin: 0;
+        padding: 0;
+        margin: auto;
+    }
+
+    .contact {
+        margin-bottom: 10rem;
+    }
+
+    .contact-icons {
+        align-items: first baseline;
+    }
+
+    #email-span {
+        width: 90%;
+        font-size: 1rem;
+        margin-top: 1.5rem;
+    }
+
+    #contact > div.contact-icons > div > a:nth-child(1) {
+        margin-left: -15px;
+    }
+
+    #contact > div.contact-icons > div > a:nth-child(3) {
+        margin-left: -35px;
+    }
+
+    .header-container {
+        margin-bottom: 2rem;
+    }
+
+    .header-container {
+        margin-bottom: 5rem;
+    }
+    
+    .header-container h2 {
+        font-size: 3rem;
+    }
+
+    #contact > div.contact-icons > div > a {
+        font-size: 1rem;
+    }
+
+    #contact > div.contact-icons img {
+        height: 30px;
+    }
+
+}
